--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -36,6 +36,12 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+#bg-img{
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  }
+
 *,
 *::before,
 *::after {
