--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -38,7 +38,7 @@
 
 #bg-img{
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   }
 
