--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -5024,6 +5024,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   display: block;
   padding: 0.75rem 1.25rem;
   border: 1px solid rgba(0, 0, 0, 0.125);
+  cursor: pointer;
 }
 .list-group-item:first-child {
   border-top-left-radius: inherit;
